--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,8 @@ jobs:
         project: '6024f306a015c'
         key: '${{ secrets.APPWRITE_API_KEY }}'
     - name: Publish Function
-      run: appwrite functions createTag \
-        --functionId="60268125628e3" \
-        --command="dotnet appwrite-dotnet-function-example.dll" \
-        --code="bin/Release/net5.0/" 
+      run: |
+        appwrite functions createTag \
+          --functionId="60268125628e3" \
+          --command="dotnet appwrite-dotnet-function-example.dll" \
+          --code="bin/Release/net5.0/" 
