--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,19 +11,19 @@ jobs:
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: '5.0'
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
     - name: Setup Appwrite CLI
       uses: appwrite/setup-for-actions@v1
       with:
         endpoint: 'https://test.monitor-api.com/v1'
         project: '6024f306a015c'
         key: '${{ secrets.APPWRITE_API_KEY }}'
-    - name: Publish Function
+    - name: Install dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+    - name: Test
+      run: dotnet test --no-restore --verbosity normal
+    - name: Deploy
       run: |
         appwrite functions createTag \
           --functionId="60268125628e3" \
