move to text analysis

--- a/appwrite-dotnet-function-example.csproj
+++ b/appwrite-dotnet-function-example.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IBM.Watson.ToneAnalyzer.v3" Version="4.6.0" />
+    <PackageReference Include="TextStatistics" Version="1.0.5" />
   </ItemGroup>
 
 </Project>
