--- a/appwrite-dotnet-function-example.csproj
+++ b/appwrite-dotnet-function-example.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appwrite" Version="0.1.0" />
     <PackageReference Include="TextStatistics" Version="1.0.5" />
   </ItemGroup>
 
